add another script test

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -9,7 +9,8 @@
 <li><a href="assorted.html">Assorted</a></li>
 <li><a href="inline-doc-write-simple.html">Simple docuemnt write</a></li>
 <li><a href="inline-doc-write.html">Script within inline script</a></li>
-<li><a href="sync-script.html">External syncronous script (with css)</a></li>
+<li><a href="sync-script.html">External syncronous script</a></li>
+<li><a href="sync-script-css.html">External syncronous script (with css)</a></li>
 
 
 </ul>
