add document IDL and test for geteleemntbyid

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -10,7 +10,9 @@
 <li><a href="inline-doc-write-simple.html">Simple docuemnt write</a></li>
 <li><a href="inline-doc-write.html">Script within inline script</a></li>
 <li><a href="sync-script.html">External syncronous script</a></li>
+<li><a href="sync-script-err.html">External syncronous script with missing js file</a></li>
 <li><a href="sync-script-css.html">External syncronous script (with css)</a></li>
+<li><a href="inline-innerhtml.html">Inline script innerHtml test</a></li>
 
 
 </ul>
