--- a/test/js/sync-script-css.html
+++ b/test/js/sync-script-css.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="tst.css">
 </head>
 <body>
-<h1>Sync script Test (css0</h1>
+<h1>Sync script Test (css)</h1>
 <p>Before</p>
 <script src="tst.js"></script>
 <p>Afterwards</p>
