fixup jsapi dom interface to include correct html/dom acessor hierachy

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -7,14 +7,20 @@
 <h1>Script Tests</h1>
 <ul>
 <li><a href="assorted.html">Assorted</a></li>
+</ul>
+<h2>Document write tests</h2>
+<ul>
 <li><a href="inline-doc-write-simple.html">Simple docuemnt write</a></li>
 <li><a href="inline-doc-write.html">Script within inline script</a></li>
 <li><a href="sync-script.html">External syncronous script</a></li>
 <li><a href="sync-script-err.html">External syncronous script with missing js file</a></li>
 <li><a href="sync-script-css.html">External syncronous script (with css)</a></li>
 <li><a href="inline-innerhtml.html">Inline script innerHtml test</a></li>
-
-
+</ul>
+<h2>Document write tests</h2>
+<ul>
+<li><a href="doc-dom1.html">Direct reference</a></li>
+<li><a href="doc-dom2.html">getElementById reference</a></li>
 </ul>
 </body>
 </html>
