make the "none" javascript implmentation specifically disable the scripting option

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -11,6 +11,7 @@
 <h2>Document write tests</h2>
 <ul>
 <li><a href="inline-doc-write-simple.html">Simple docuemnt write</a></li>
+<li><a href="noscript-inline-doc-write.html">Script within inline script document write with noscript alternative</a></li>
 <li><a href="inline-doc-write.html">Script within inline script</a></li>
 <li><a href="sync-script.html">External syncronous script</a></li>
 <li><a href="sync-script-err.html">External syncronous script with missing js file</a></li>
