--- a/test/js/doc-dom2.html
+++ b/test/js/doc-dom2.html
@@ -4,9 +4,13 @@
 <link rel="stylesheet" type="text/css" href="tst.css">
 </head>
 <body>
-<h1 id="heading">Direct DOM element reference</h1>
-<p>Before</p>
-<script>document.write(document.getElementById("heading").textContent);</script>
-<p>Afterwards</p>
+<h1>DOM getElementById element reference</h1>
+<p>This shows the text content of an element obtained using <a href="http://dom.spec.whatwg.org/#dom-document-getelementbyid">document.getElementById</a></p>
+<p>Referenced text</p>
+<p id="reftext">DOM getElementById element referenced test text</p>
+<p>Inserted text</p>
+<p><script>document.write(document.getElementById("reftext").textContent);</script></p>
+<p>After inserted text</p>
+
 </body>
 </html>
