add another javascript test

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -23,5 +23,9 @@
 <li><a href="doc-dom1.html">Direct reference</a></li>
 <li><a href="doc-dom2.html">getElementById reference</a></li>
 </ul>
+<h2>Assorted</a>
+<ul>
+<li><a href="wikipedia-lcm.html">Example from wikipedia</a></li>
+</ul>
 </body>
 </html>
