make javascript tests acessible from index and tidy them up a little

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -1,14 +1,16 @@
 <html>
 <head>
-<title>Script Tests</title>
+<title>JavaScript Tests</title>
 <link rel="stylesheet" type="text/css" href="tst.css">
 </head>
 <body>
-<h1>Script Tests</h1>
+<h1>JavaScript Tests</h1>
+<h2>Window</h2>
 <ul>
-<li><a href="assorted.html">Assorted</a></li>
+<li><a href="window.lately.html">location</a></li>
 </ul>
-<h2>Document write tests</h2>
+
+<h2>Document write</h2>
 <ul>
 <li><a href="inline-doc-write-simple.html">Simple document write</a></li>
 <li><a href="noscript-inline-doc-write.html">Script within inline script document write with noscript alternative</a></li>
@@ -18,13 +20,24 @@
 <li><a href="sync-script-css.html">External syncronous script (with css)</a></li>
 <li><a href="inline-innerhtml.html">Inline script innerHtml test</a></li>
 </ul>
-<h2>Document write tests</h2>
+
+<h2>DOM tests</h2>
+<h3>Reference method tests</h3>
 <ul>
-<li><a href="doc-dom1.html">Direct reference</a></li>
-<li><a href="doc-dom2.html">getElementById reference</a></li>
+<li><a href="doc-dom1.html">firstElementChild</a></li>
+<li><a href="doc-dom2.html">getElementById</a></li>
+<li><a href="dom-getElementsByTagName.html">getElementsByTagName</a></li>
+
 </ul>
-<h2>Assorted</a>
+<h3>Document element specific</h3>
 <ul>
+<li><a href="dom-doc-cookie.html">Cookie dispaly (only from server)</a></li>
+<li><a href="dom-doc-location.html">location</a></li>
+</ul>
+<h2>Assorted</h2>
+<ul>
+<li><a href="assorted-log-doc-write.html">console.log and document.write</a></li>
+
 <li><a href="wikipedia-lcm.html">Example from wikipedia</a></li>
 </ul>
 </body>
