--- a/test/js/doc-dom1.html
+++ b/test/js/doc-dom1.html
@@ -1,14 +1,11 @@
 <html>
 <head>
-<title>Direct DOM element reference</title>
+<title>DOM firstElementChild reference</title>
 <link rel="stylesheet" type="text/css" href="tst.css">
 </head>
 <body>
-<h1>Direct DOM element reference</h1>
-<p>head</p>
-<script>document.write(document.head.firstElementChild.textContent);</script>
-<p>body</p>
-<script>document.write(document.body.firstElementChild.textContent);</script>
-<p>after</p>
+<h1>DOM firstElementChild reference</h1>
+<p><b>head.firstElementChild:</b> <script>document.write(document.head.firstElementChild.textContent);</script></p>
+<p><b>body.firstElementChild:</b> <script>document.write(document.body.firstElementChild.textContent);</script></p>
 </body>
 </html>
