safely deal with NULL strings

--- a/test/js/dom-node-enumerate.html
+++ b/test/js/dom-node-enumerate.html
@@ -16,6 +16,12 @@ function output(x,y) {
 for(var key in Node){
 output(key, Node[key]);
 }
+
+    document.body.appendChild(document.createElement('hr'));
+
+for(var key in document.body){
+output(key, document.body[key]);
+}
 </script>
 </body>
 </html>
