--- a/test/js/index.html
+++ b/test/js/index.html
@@ -29,6 +29,11 @@
 <li><a href="dom-getElementsByTagName.html">getElementsByTagName</a></li>
 
 </ul>
+<h3>Enumeration tests</h3>
+<ul>
+<li><a href="dom-node-enumerate.html">Node element interface</a></li>
+<li><a href="dom-body-enumerate.html">Body element interface</a></li>
+</ul>
 <h3>Document element specific</h3>
 <ul>
 <li><a href="dom-doc-cookie.html">Cookie dispaly (only from server)</a></li>
