--- a/test/js/index.html
+++ b/test/js/index.html
@@ -24,7 +24,8 @@
 <h2>DOM tests</h2>
 <h3>Reference method tests</h3>
 <ul>
-<li><a href="doc-dom1.html">firstElementChild</a></li>
+<li><a href="dom-element-firstElementChild.html">firstElementChild</a></li>
+<li><a href="dom-element-lastElementChild.html">lastElementChild</a></li>
 <li><a href="doc-dom2.html">getElementById</a></li>
 <li><a href="dom-getElementsByTagName.html">getElementsByTagName</a></li>
 
