implement previousElementSibling and nextElementSibling

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -26,6 +26,7 @@
 <ul>
 <li><a href="dom-element-firstElementChild.html">firstElementChild</a></li>
 <li><a href="dom-element-lastElementChild.html">lastElementChild</a></li>
+<li><a href="dom-element-next_prev_ElementSibling.html">previousElementSibling nextElementSibling</a></li>
 <li><a href="doc-dom2.html">getElementById</a></li>
 <li><a href="dom-getElementsByTagName.html">getElementsByTagName</a></li>
 
