add enumeration test on the document node

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -36,6 +36,7 @@
 <ul>
 <li><a href="dom-node-enumerate.html">Node element interface</a></li>
 <li><a href="dom-body-enumerate.html">Body element interface</a></li>
+<li><a href="dom-document-enumerate.html">Document interface</a></li>
 </ul>
 <h3>Document element specific</h3>
 <ul>
