add window enumeration test

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -8,6 +8,7 @@
 <h2>Window</h2>
 <ul>
 <li><a href="window.lately.html">location</a></li>
+<li><a href="window-enumerate.html">enumerate</a></li>
 </ul>
 
 <h2>Document write</h2>
