make events work on elements

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -5,11 +5,14 @@
 </head>
 <body>
 <h1>JavaScript Tests</h1>
+
+
 <h2>Window</h2>
 <ul>
 <li><a href="window.lately.html">location</a></li>
 <li><a href="window-enumerate.html">enumerate</a></li>
 </ul>
+
 
 <h2>Document write</h2>
 <ul>
@@ -22,7 +25,9 @@
 <li><a href="inline-innerhtml.html">Inline script innerHtml test</a></li>
 </ul>
 
+
 <h2>DOM tests</h2>
+
 <h3>Reference method tests</h3>
 <ul>
 <li><a href="dom-element-firstElementChild.html">firstElementChild</a></li>
@@ -31,24 +36,34 @@
 <li><a href="dom-element-childElementCount.html">childElementCount</a></li>
 <li><a href="doc-dom2.html">getElementById</a></li>
 <li><a href="dom-getElementsByTagName.html">getElementsByTagName</a></li>
-
 </ul>
+
 <h3>Enumeration tests</h3>
 <ul>
 <li><a href="dom-node-enumerate.html">Node element interface</a></li>
 <li><a href="dom-body-enumerate.html">Body element interface</a></li>
 <li><a href="dom-document-enumerate.html">Document interface</a></li>
 </ul>
+
 <h3>Document element specific</h3>
 <ul>
 <li><a href="dom-doc-cookie.html">Cookie dispaly (only from server)</a></li>
 <li><a href="dom-doc-location.html">location</a></li>
 </ul>
+
+
+<h2>Dom events</h2>
+<ul>
+<li><a href="event-onload.html">window.onload</a></li>
+<li><a href="event-onclick.html">button.onclick</a></li>
+</ul>
+
+
 <h2>Assorted</h2>
 <ul>
 <li><a href="assorted-log-doc-write.html">console.log and document.write</a></li>
-
 <li><a href="wikipedia-lcm.html">Example from wikipedia</a></li>
 </ul>
+
 </body>
 </html>
