--- a/test/js/dom-getElementsByTagName.html
+++ b/test/js/dom-getElementsByTagName.html
@@ -15,6 +15,16 @@
 for (var i=0;i<pcol.length;i++)
 { 
 document.write(pcol.item(i).textContent);
+document.write("|");
+}
+</script>
+<br>
+<p>
+<script>
+for (var i=0;i<pcol.length;i++)
+{ 
+document.write(pcol[i].textContent);
+document.write("|");
 }
 </script>
 </body>
