add recusion and infinite loop tests

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -6,6 +6,12 @@
 <body>
 <h1>JavaScript Tests</h1>
 
+<h2>Core</h2>
+<ul>
+<li><a href="core.recursion.html">Infinite Recursion</a></li>
+<li><a href="core.infinite.html">Infinite loop</a></li>
+</ul>
+
 
 <h2>Window</h2>
 <ul>
